--- a/app/styles/theme/nw-badges.scss
+++ b/app/styles/theme/nw-badges.scss
@@ -14,7 +14,8 @@
   div {
     display: inline-block;
     height: 93px;
-    margin-right: 24px;
+    margin-left: 12px;
+    margin-right: 12px;
     border-radius: 12px;
     overflow: visible;
     img {
